--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "debug": "^3.1.0",
-    "mqtt": "^2.15.3"
+    "mqtt": "^2.15.3",
+    "promise-fifo": "^1.0.0"
   }
 }
